--- a/code.Rmd
+++ b/code.Rmd
@@ -13,8 +13,9 @@ library(plotly)
 data(rest_inspec)
 rest_inspec = rest_inspec %>% 
   rename(rest_name = dba, id = camis) %>% 
-  select(action, boro, id, critical_flag, cuisine_description,
-         rest_name, inspection_type, score, grade, grade_date, zipcode) %>%
-  filter(!is.na(grade)) %>% 
-  sample_n(5000)
+  separate(grade_date, into = c("year", "month", "day"), sep = "-") %>% select(action, boro, id, critical_flag, cuisine_description,
+         rest_name, inspection_type, score, grade, year, zipcode) %>%
+  filter(!is.na(grade), !is.na(year), year %in% 2013:2017) %>% 
+  sample_n(5000) %>% 
+  arrange(year)
 ```
