--- a/CV.Rmd
+++ b/CV.Rmd
@@ -8,29 +8,39 @@ title: "CV"
 * Department: Sociomedical Sciences
 * Certificate: Applied Biostatistics
 * Awards: Dr. Jack Elinson Scholarship recipient
-* Relevant coursework: New Media and Health; Quantitative Research Methods for Social Sciences; Health Promotion: Theory, Research, and Practice; Data Science I; Analysis of Categorical Variables
+* Relevant coursework: New Media and Health; Quantitative Research Methods for Social Sciences; Health Promotion: Theory, Research, and Practice; Data Science I; Analysis of Categorical Variables; Machine Learning for Social Sciences
 
 #### Bachelor of Science | March 2017 | University of California, Los Angeles
 * Major: Cognitive Science
 * Awards: Magna Cum Laude, Dean's Honors List
 * Relevant coursework: Health Psychology; Advanced Programming; Machine Learning in Brain Science
 
-### Relevant Experience
+###Skills
 
-#### Digital Health Intern | AIDS Institute | Jan. 2018-Present
-* Creates and manages social media strategies for the Y Get It? (YGI) project, which focuses on linking HIV-affected youth to care through a mobile application intervention and a comic serial, “Tested.”  
-* Organizes and facilitates conference events and administrative tasks for the Clinical Education Initiative (CEI), which implements telehealth programs for clinicians across New York state.
-* Develops evaluation summaries and research ideas with the CEI and YGI evaluation teams.
+* Statistical Software: Working experience with SAS, R, and Python
+* Computer: Experienced in Microsoft Word, Excel, and PowerPoint for both Mac and PC; working experience with the Adobe Creative Suite
+* Research Experience: Experienced in conducting literature reviews, writing research proposals, and collecting and analyzing data
+* Interests: Ethical frameworks for big data, machine learning and algorithmic tools in public health, narrative and storytelling in public health promotion 
 
-#### VP of External Communication | Mailman Healthcare Data Analytics Club | Jan. 2018-Present
-* Engages in event programming, including advertising and logistics needs, for events designed to elevate the analytical skill sets of the Mailman student body and ultimately improve data-driven healthcare decisions in future careers. 
-* Serves as the direct liaison to alumni and external organizations for event planning and management.
+### Digital Health Experience
+
+#### NYSDOH's AIDS Institute | Digital Health Intern | Jan 2018 - Present
+* Create and manage social media strategies for the Y Get It? (YGI) project, which focuses on linking HIV-affected youth to care through a mobile application intervention and a comic serial, “Tested”    
+* Organize and facilitate conference events and administrative tasks for the Clinical Education Initiative (CEI), which implements telehealth programs for clinicians across New York State
+* Develop and lead presentations on new tools and technologies for digital health promotion
 
 ### Research Experience
 
-#### Research Fellow | Lerner Center for Public Health Promotion | June 2018-Present
-* Assists with coding, analyzing, and interpreting point-of-sale advertising data for tobacco products in New York City. 
-* Contributes to the development of a study on social media advertising for marijuana vaporizer pens.
-* Provides support for a menstrual health product content analysis study by collecting advertising data.
+#### Lerner Center for Public Health Promotion | Research Fellow | June - Dec 2018
+* Assisted with coding, analyzing, and interpreting point-of-sale advertising data for tobacco products in New York City.
+* Identified research questions, developed survey instruments, and coded data to explore social media advertising for marijuana vaporizer pens.
+
+### Leadership Experience
  
+#### Mailman Healthcare Data Analytics Club | VP of External Communication | Jan - Dec 2018
+* Engaged in event programming, including advertising and logistics needs, for events designed to elevate the analytical skill sets of the Mailman student body and ultimately improve data-driven healthcare decisions in future careers
+
+#### Columbia University Bard Hall Players | Stage Manager | Jan – Dec 2018
+* Organized and maintained rehearsal schedules, events, and creative team communication for musical and stage productions with the interschool medical center campus theater group 
+* Led the efficient and smooth implementation of backstage and onstage operations for performances
 
