--- a/CV.Rmd
+++ b/CV.Rmd
@@ -17,8 +17,8 @@ title: "CV"
 
 ###Skills
 
-* Statistical Software: Working experience with SAS, R, and Python
-* Computer: Experienced in Microsoft Word, Excel, and PowerPoint for both Mac and PC; working experience with the Adobe Creative Suite
+* Statistical Software: Experienced with SAS, R, Python, HTML5, CSS, Javascript, and C++
+* Computer: Experienced in Microsoft Word, Excel, and PowerPoint for both Mac and PC; proficient with the Adobe Creative Suite
 * Research Experience: Experienced in conducting literature reviews, writing research proposals, and collecting and analyzing data
 * Interests: Ethical frameworks for big data, machine learning and algorithmic tools in public health, narrative and storytelling in public health promotion 
 
@@ -26,7 +26,7 @@ title: "CV"
 
 #### NYSDOH's AIDS Institute | Digital Health Intern | Jan 2018 - Present
 * Create and manage social media strategies for the Y Get It? (YGI) project, which focuses on linking HIV-affected youth to care through a mobile application intervention and a comic serial, “Tested”    
-* Organize and facilitate conference events and administrative tasks for the Clinical Education Initiative (CEI), which implements telehealth programs for clinicians across New York State
+* To improve program evaluation, create web-scraping algorithms and perform quantitative and qualitative analysis on collected social media comment data.
 * Develop and lead presentations on new tools and technologies for digital health promotion
 
 ### Research Experience
@@ -37,10 +37,13 @@ title: "CV"
 
 ### Leadership Experience
  
+#### Columbia University Bard Hall Players | Stage Manager | Jan – Present
+* Organize and maintain rehearsal schedules, events, and creative team communication for musical and stage productions with the interschool medical center campus theater group 
+* Lead the efficient and smooth implementation of backstage and onstage operations for performances
+
 #### Mailman Healthcare Data Analytics Club | VP of External Communication | Jan - Dec 2018
 * Engaged in event programming, including advertising and logistics needs, for events designed to elevate the analytical skill sets of the Mailman student body and ultimately improve data-driven healthcare decisions in future careers
 
-#### Columbia University Bard Hall Players | Stage Manager | Jan – Dec 2018
-* Organized and maintained rehearsal schedules, events, and creative team communication for musical and stage productions with the interschool medical center campus theater group 
-* Led the efficient and smooth implementation of backstage and onstage operations for performances
-
+#### Tau Beta Sigma, Epsilon Kappa Chapter | Webmaster | Sept 2014 – June 2017
+* Redesigned site theme and content to improve user experience and navigation, including introducing an interactive family tree with D3.js and systematized profile pages with dynamic elements using HTML5
+* Worked to integrate GSuite into the officer board’s email and online organizational tools
