--- a/index.Rmd
+++ b/index.Rmd
@@ -8,11 +8,11 @@ title: "Bryce Wong"
 
 ### About Bryce (she/her/hers):
 
-MPH candidate interested in the social dynamics of public health, technology, and media.
+MPH candidate passionate about the social dynamics of public health, technology, and data.
 
-My thesis explores the ethical implications of big data for public health. I'm primarily interested in using qualitative research methods to investigate:
+My thesis explores the ethical implications of big data for public health. I'm proposing the use of qualitative research methods to investigate:
 
-  * The perceptions and agendas influencing biostatisticians and computer scientists working in this field
+  * The perceptions and agendas influencing biostatisticians and data scientists working in this field
   * How data infrastructures are designed and managed for health technology
   * The potential impact of such design and management choices on issues of normalization, oppression, and empowerment 
 
