Updating education info

--- a/CV.Rmd
+++ b/CV.Rmd
@@ -4,7 +4,7 @@ title: "CV"
 
 ### Education
 
-#### Master of Public Health | Expected May 2019 | Columbia University Mailman SPH
+#### Master of Public Health | May 2019 | Columbia University Mailman SPH
 * Department: Sociomedical Sciences
 * Certificate: Applied Biostatistics
 * Awards: Dr. Jack Elinson Scholarship recipient
