--- a/CV.Rmd
+++ b/CV.Rmd
@@ -57,6 +57,10 @@ title: "CV"
 
 ### Projects
 
+#### Open Climate Collabathon 2019 | Consumer Disclosure Team | Dec. 2019
+* Member of the the Consumer Disclosure team for the 2019 Open Climate Collabathon hosted by the Yale OpenLab.
+* I guided the writing of an overarching framework for the development and reporting of a "sustainability score" that could be used to grade the supply chain of a consumer product. The team also developed a proof-of-concept widget that could be added as a browser extension to report these scores on consumer websites.
+* We won the Community Choice award and the Most Innovative Contribution Award. 
 
 #### Mount Sinai Health Hackathon 2019 | Team Blackbox AI | Oct. 2019
 * Worked with a team to design and create a website that uses video lessons, interactive statistical graphs, and written descriptions to educate clinicians on the application and interpretation of artificial intelligence in healthcare settings
